Adding things, fixing things, etc.

--- a/src/main/resources/assets/randomitems/lang/en_US.lang
+++ b/src/main/resources/assets/randomitems/lang/en_US.lang
@@ -5,5 +5,6 @@ tile.block_love_tesseract.name=Love Tesseract
 #Items
 item.moist_towelette.name=Moist Towelette
 item.sanitizing_water.name=Sanitizing Water
+item.secret_coke.name=Secret Coke
 #Other
 itemGroup.randomitems=§1§lEnder's Random Items
