--- a/src/main/resources/assets/randomitems/lang/en_us.lang
+++ b/src/main/resources/assets/randomitems/lang/en_us.lang
@@ -1,10 +1,13 @@
 #Blocks
 tile.block_tesseract.name=Tesseract
 tile.block_love_tesseract.name=Love Tesseract
+tile.block_stone_torch.name=Stone Torch
 #Items
 item.moist_towelette.name=Moist Towelette
 item.sanitizing_water.name=Sanitizing Water
 item.secret_coke.name=Secret Coke
+item.stone_stick.name=Stone Stick
+item.stone_chisel.name=Stone Chisel
 #Puffballs
 item.puffball_tail.name=Puffball Tail
 item.puffball_fur.name=Puffball Fur
