--- a/src/main/resources/assets/randomitems/lang/en_us.lang
+++ b/src/main/resources/assets/randomitems/lang/en_us.lang
@@ -8,6 +8,7 @@ item.sanitizing_water.name=Sanitizing Water
 item.secret_coke.name=Secret Coke
 item.stone_stick.name=Stone Stick
 item.stone_chisel.name=Stone Chisel
+item.questionable_cheese.name=Questionable Cheese
 #Puffballs
 item.puffball_tail.name=Puffball Tail
 item.puffball_fur.name=Puffball Fur
