add flard, and fix things. Still missing 5 textures though

--- a/src/main/resources/assets/randomitems/lang/en_us.lang
+++ b/src/main/resources/assets/randomitems/lang/en_us.lang
@@ -9,6 +9,7 @@ item.secret_coke.name=Secret Coke
 item.stone_stick.name=Stone Stick
 item.stone_chisel.name=Stone Chisel
 item.questionable_cheese.name=Questionable Cheese
+item.flard.name=FLARD
 #Puffballs
 item.puffball_tail.name=Puffball Tail
 item.puffball_fur.name=Puffball Fur
