Any computer is a laptop if you're brave enough

--- a/src/main/resources/assets/randomitems/lang/en_us.lang
+++ b/src/main/resources/assets/randomitems/lang/en_us.lang
@@ -32,3 +32,4 @@ item.puffball_magenta.name=Magenta Puffball
 item.puffball_pink.name=Pink Puffball
 #Other
 itemGroup.randomitems=§1§lEnder's Random Items
+enchantment.level.0=
