--- a/src/main/resources/assets/randomitems/lang/en_us.lang
+++ b/src/main/resources/assets/randomitems/lang/en_us.lang
@@ -30,6 +30,8 @@ item.puffball_blue.name=Blue Puffball
 item.puffball_purple.name=Purple Puffball
 item.puffball_magenta.name=Magenta Puffball
 item.puffball_pink.name=Pink Puffball
+#Commands
+command.repair.invalidParams=Invalid Parameter:
 #Other
 itemGroup.randomitems=§1§lEnder's Random Items
 enchantment.level.0=
