--- a/src/main/resources/assets/randomitems/lang/en_us.lang
+++ b/src/main/resources/assets/randomitems/lang/en_us.lang
@@ -35,3 +35,4 @@ command.repair.invalidParams=Invalid Parameter:
 #Other
 itemGroup.randomitems=§1§lEnder's Random Items
 enchantment.level.0=
+enchantment.antigravity=Anti Gravity
