--- a/src/main/resources/assets/randomitems/lang/en_us.lang
+++ b/src/main/resources/assets/randomitems/lang/en_us.lang
@@ -27,6 +27,7 @@ item.stone_stick.name=Stone Stick
 item.stone_chisel.name=Stone Chisel
 item.questionable_cheese.name=Questionable Cheese
 item.flard.name=FLARD
+item.syntactic_sugar.name=Syntactic Sugar
 
 item.puffball_tail.name=Puffball Tail
 item.puffball_fur.name=Puffball Fur
