--- a/src/main/resources/assets/randomitems/lang/en_us.lang
+++ b/src/main/resources/assets/randomitems/lang/en_us.lang
@@ -24,7 +24,8 @@ item.moist_towelette.name=Moist Towelette
 item.sanitizing_water.name=Sanitizing Water
 item.secret_coke.name=Secret Coke
 item.stone_stick.name=Stone Stick
-item.stone_chisel.name=Stone Chisel
+item.iron_stone_chisel.name=Iron Stone Chisel
+item.diamond_stone_chisel.name=Diamond Stone Chisel
 item.questionable_cheese.name=Questionable Cheese
 item.flard.name=FLARD
 item.syntactic_sugar.name=Syntactic Sugar
@@ -74,7 +75,7 @@ item.invisible_diamond_chestplate.name=Invisible Diamond Chestplate
 item.invisible_diamond_leggings.name=Invisible Diamond Leggings
 item.invisible_diamond_boots.name=Invisible Diamond Boots
 
-command.repair.success=Successfully repaired your: 
+command.repair.success=Successfully repaired your:
 itemGroup.randomitems=§1§lEnder's Random Items§r
 
 enchantment.level.0=
