Refactor a couple million things

--- a/src/main/resources/assets/randomitems/lang/en_us.lang
+++ b/src/main/resources/assets/randomitems/lang/en_us.lang
@@ -29,6 +29,7 @@ item.diamond_stone_chisel.name=Diamond Stone Chisel
 item.questionable_cheese.name=Questionable Cheese
 item.flard.name=FLARD
 item.syntactic_sugar.name=Syntactic Sugar
+item.dog_residue.name=Dog Residue
 
 item.puffball_tail.name=Puffball Tail
 item.puffball_fur.name=Puffball Fur
